fix: remove col-12 padding horizontal overflow

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,10 +1,13 @@
 body {
     font-family: 'Roboto', sans-serif;
 }
-
 .alert-container {
+
+}
+.alert-container .col-12 {
     padding-left: 0;
     padding-right: 0;
+    
 }
 
 .site-wide-alert {
